build mutli-platform images
Issue-ID: INT-928

Change-Id: I05dcd3e7ed2c01bd74c6be4210c6e24dd4e72543
Signed-off-by: sandovalfr <frank.sandoval@oamtechnologies.com>

--- a/dbc-client/pom.xml
+++ b/dbc-client/pom.xml
@@ -202,9 +202,10 @@
                         <verbose>${docker.verbose}</verbose>
                         <apiVersion>${docker.apiVersion}</apiVersion>
                         <pullRegistry>${docker.pull.registry}</pullRegistry>
+                        <pushRegistry>${docker.push.registry}</pushRegistry>
                         <images>
                             <image>                            
-                                <name>${onap.nexus.dockerregistry.daily}/${docker.image}</name>
+                                <name>${docker.image}</name>
                                 <build>
                                     <cleanup>try</cleanup>
                                     <dockerFileDir>${basedir}/target/docker-stage</dockerFileDir>
