--- a/pom.xml
+++ b/pom.xml
@@ -43,9 +43,9 @@
   <build>
     <plugins>
         <plugin>
-            <groupId>com.spotify</groupId>
+            <groupId>io.fabric8</groupId>
             <artifactId>docker-maven-plugin</artifactId>
-            <version>${docker.maven.plugin.version}</version>
+            <version>0.28.0</version>  
             <configuration>
                 <skipDockerBuild>${skip.docker.build}</skipDockerBuild>
             </configuration>
