Copy Dublin SSL artifacts to container
Change-Id: Ia0fb6b8e216c151887b765edacfb7fcae23552b8
Signed-off-by: dglFromAtt <dgl@research.att.com>
Issue-ID: DMAAP-1123

--- a/dmaap-bc/src/main/resources/Dockerfile
+++ b/dmaap-bc/src/main/resources/Dockerfile
@@ -26,7 +26,7 @@ COPY /opt /opt
 
 WORKDIR /opt/app/dmaapbc
 
-RUN mv etc/dbc-api.jks etc/keystore && \
+RUN mv etc/org.onap.dmaap-bc.jks etc/keystore && \
     chmod 600 etc/keystore && \
     chmod 600 etc/org.onap.dmaap-bc.trust.jks && \
     chmod +x misc/cert-client-init.sh && \
