Install curl and client certificate
Change-Id: I7a85151f43cf65483a9d79171212cc00378168ff
Signed-off-by: dglFromAtt <dgl@research.att.com>
Issue-ID: DMAAP-1120

--- a/dbc-client/pom.xml
+++ b/dbc-client/pom.xml
@@ -131,6 +131,7 @@
                     <directory>${multiproject.basedir}/misc</directory>
                         <includes>
                             <include>cert-client-init.sh</include>
+                            <include>aaf-ca.crt</include>
                         </includes>
                 </resource>
               </resources>
