--- a/dbc-client/src/main/resources/Dockerfile
+++ b/dbc-client/src/main/resources/Dockerfile
@@ -26,7 +26,16 @@ COPY /opt /opt
 
 WORKDIR /opt/app/dbc-client
 
-#RUN apk add --no-cache curl
+# Install AAF CA certificate
+RUN apk update && apk add ca-certificates && rm -rf /var/cache/apk/*
+RUN mkdir -p /usr/local/share/ca-certificates && \
+    mv misc/aaf-ca.crt /usr/local/share/ca-certificates/aaf-ca.crt
+RUN update-ca-certificates
+
+# Install curl
+RUN apk add --no-cache curl
+
+RUN apk add --no-cache curl
 
 RUN chmod +x /opt/app/dbc-client/misc/cert-client-init.sh && \
     chmod +x /opt/app/dbc-client/bin/* && \
