--- a/dmaap-bc/pom.xml
+++ b/dmaap-bc/pom.xml
@@ -222,6 +222,7 @@
                     <directory>${multiproject.basedir}/misc</directory>
                         <includes>
                             <include>cert-client-init.sh</include>
+                            <include>aaf-ca.crt</include>
                         </includes>
                 </resource>
                  <resource>
