Remove apk upgrade
Change-Id: If2a6f53c00597fc3076f2441a8708b768ee5b6f7
Signed-off-by: dglFromAtt <dgl@research.att.com>
Issue-ID: DMAAP-1120

--- a/dmaap-bc/src/main/resources/Dockerfile
+++ b/dmaap-bc/src/main/resources/Dockerfile
@@ -36,7 +36,7 @@ RUN update-ca-certificates
 RUN apk add --no-cache curl
 
 # Install bash
-RUN apk update && apk upgrade && apk add bash
+RUN apk update  && apk add bash
 
 RUN mv etc/org.onap.dmaap-bc.jks etc/keystore && \
     chmod 600 etc/keystore && \
