Add client cert PEM files for authenticated requests
Note also relocated AAF cert artifacts since they are used by
both docker images created in this repo.

Change-Id: I539c0062ab9bc573e610bc7669d78e9528e2aace
Signed-off-by: dglFromAtt <dgl@research.att.com>
Issue-ID: DMAAP-1142

--- a/dbc-client/pom.xml
+++ b/dbc-client/pom.xml
@@ -113,6 +113,25 @@
                         </includes>
                 </resource>
                  <resource>
+                    <targetPath>${basedir}/target/docker-stage/opt/app/dbc-client/etc</targetPath>
+                    <directory>${multiproject.basedir}/certs</directory>
+                        <includes>
+                          <include>org.onap.dmaap-bc.cred.props</include>
+                          <include>org.onap.dmaap-bc.crontab.sh</include>
+                          <include>org.onap.dmaap-bc.jks</include>
+                          <include>org.onap.dmaap-bc.keyfile</include>
+                          <include>org.onap.dmaap-bc.location.props</include>
+                          <include>org.onap.dmaap-bc.p12</include>
+                          <include>org.onap.dmaap-bc.props</include>
+                          <include>org.onap.dmaap-bc.showpass</include>
+                          <include>org.onap.dmaap-bc.trust.jks</include>
+			  <include>ca.pem</include>
+                          <include>client.pem</include>
+			  <include>key.pem</include>
+                        </includes>
+                </resource>
+
+                 <resource>
                     <targetPath>${basedir}/target/docker-stage/opt/app/dbc-client/bin</targetPath>
                     <directory>${basedir}/misc</directory>
                         <includes>
@@ -120,7 +139,7 @@
                         </includes>
                 </resource>
                  <resource>
-                    <targetPath>${basedir}/target/docker-stage/opt/app/dmaapbc/etc</targetPath>
+                    <targetPath>${basedir}/target/docker-stage/opt/app/dbc-client/etc</targetPath>
                     <directory>${basedir}</directory>
                         <includes>
                             <include>version.properties</include>
@@ -251,7 +270,7 @@
     <jettyVersion>9.4.12.RC2</jettyVersion>
     <eelf.version>1.0.0</eelf.version>
     <swagger.version>1.5.19</swagger.version>
-    <artifact.version>1.0.5</artifact.version>
+    <artifact.version>1.0.6</artifact.version>
     <!--  SONAR  -->
     <jacoco.version>0.7.7.201606060606</jacoco.version>
     <sonar-jacoco-listeners.version>3.2</sonar-jacoco-listeners.version>
