Add lnk for cadi certificates
Change-Id: I0ef1b93445f8b6bf09955f168c1286401a335566
Issue-ID: DMAAP-1154
Signed-off-by: burdziak <olaf.burdziakowski@nokia.com>

--- a/dmaap-bc/src/main/resources/Dockerfile
+++ b/dmaap-bc/src/main/resources/Dockerfile
@@ -38,6 +38,10 @@ RUN apk add --no-cache curl
 # Install bash
 RUN apk update  && apk add bash
 
+#prepare certificate location for cadi
+RUN mkdir -p /opt/app/osaaf && \
+    ln -s /opt/app/dmaapbc/etc /opt/app/osaaf/local
+
 RUN mv etc/org.onap.dmaap-bc.jks etc/keystore && \
     chmod 600 etc/keystore && \
     chmod 600 etc/org.onap.dmaap-bc.trust.jks && \
