Run as non-root
Change-Id: I25f5bf778b9878648bd305fa0de965e4e7ec718c
Signed-off-by: dglFromAtt <dgl@research.att.com>
Issue-ID: DMAAP-1164

--- a/dbc-client/src/main/resources/Dockerfile
+++ b/dbc-client/src/main/resources/Dockerfile
@@ -46,4 +46,10 @@ RUN chmod +x /opt/app/dbc-client/bin/* && \
 
 VOLUME /opt/app/dbc-client/log
 
+RUN addgroup -S -g 1001 onap \
+    && adduser -S -u 1000 dbc -G onap \
+    && chown -R dbc:onap /opt/
+
+USER dbc
+
 ENTRYPOINT ["sh", "./bin/dbc-client" ]
