Fix for missing aaf_env in CADI props
Change-Id: I8573ee3b9942d296759a459a37333d5fe78d2b97
Issue-ID: DMAAP-1165
Signed-off-by: Tomek Kaminski <tomasz.kaminski@nokia.com>

--- a/certs/org.onap.dmaap-bc.props
+++ b/certs/org.onap.dmaap-bc.props
@@ -4,6 +4,7 @@
 #   on 2019-03-22T17:37:33.690+0000
 # @copyright 2016, AT&T
 ############################################################
+aaf_env=DEV
 aaf_id=dmaap-bc@dmaap-bc.onap.org
 aaf_locate_url=https://aaf-onap-test.osaaf.org:8095
 aaf_url=https://AAF_LOCATE_URL/AAF_NS.service:2.1
