adding Fiachra Corcoran to INFO.yaml as a committer Issue-ID: DMAAP-1189 Change-Id: I99115de2e80187b0985dc420200b3198af61cfc3 Signed-off-by: sawantmandar <ms5838@att.com>

--- a/INFO.yaml
+++ b/INFO.yaml
@@ -69,7 +69,13 @@ committers:
       email: 'conor.ward@ericsson.com'
       company: 'ericsson'
       id: 'econwar'
-      timezone: 'America/Dallas'
+      timezone: 'Europe/Dublin'
+    - name: 'Fiachra Corcoran'
+      email: 'fiachra.corcoran@est.tech'
+      company: 'ericsson'
+      id: 'efiacor'
+      timezone: 'Europe/Dublin'
+      
 tsc:
     approval: 'https://lists.onap.org/pipermail/onap-tsc'
     changes:
