--- a/pom.xml
+++ b/pom.xml
@@ -22,17 +22,18 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.onap.dmaap.buscontroller</groupId>
   <artifactId>parent</artifactId>
-  <version>1.1.3-SNAPSHOT</version>
+  <version>${artifactVersion}-SNAPSHOT</version>
   <name>dmaap-buscontroller</name>
   <packaging>pom</packaging>
   
   <parent>
-  <groupId>org.onap.oparent</groupId>
-  <artifactId>oparent</artifactId>
-  <version>1.2.2</version>
+  	<groupId>org.onap.oparent</groupId>
+  	<artifactId>oparent</artifactId>
+  	<version>1.2.2</version>
   </parent>
 
   <properties>
+    <artifactVersion>1.1.6</artifactVersion>
     <multiproject.basedir>${basedir}</multiproject.basedir>
         <docker.maven.plugin.version>1.0.0</docker.maven.plugin.version>
         <skip.docker.build>true</skip.docker.build>
