update release notes
Issue-ID: DMAAP-1308
Signed-off-by: dglFromAtt <dgl@research.att.com>
Change-Id: I7e32c9e8cf1b3a655c0fe72e907e2ae0b4a12aef
Signed-off-by: dglFromAtt <dgl@research.att.com>
(cherry picked from commit 2d14d6dff3456430022efe6cf3607c9f8794a297)

--- a/dmaap-bc/pom.xml
+++ b/dmaap-bc/pom.xml
@@ -421,7 +421,7 @@
     <dependency>
       <groupId>org.onap.dmaap.dbcapi</groupId>
       <artifactId>dbcapi</artifactId>
-      <version>1.0.30-SNAPSHOT</version>
+      <version>1.0.30</version>
     </dependency>
   </dependencies>
   <reporting>
