--- a/dmaap-bc/pom.xml
+++ b/dmaap-bc/pom.xml
@@ -29,7 +29,7 @@
   <parent>
     <groupId>org.onap.oparent</groupId>
     <artifactId>oparent</artifactId>
-    <version>2.0.0</version>
+    <version>2.1.0</version>
     <relativePath/>
   </parent>
   <build>
@@ -421,7 +421,7 @@
     <dependency>
       <groupId>org.onap.dmaap.dbcapi</groupId>
       <artifactId>dbcapi</artifactId>
-      <version>1.0.30</version>
+      <version>2.0.1-SNAPSHOT</version>
     </dependency>
   </dependencies>
   <reporting>
@@ -459,7 +459,7 @@
     <jettyVersion>9.4.12.RC2</jettyVersion>
     <eelf.version>1.0.0</eelf.version>
     <swagger.version>1.5.19</swagger.version>
-    <artifact.version>1.1.8-SNAPSHOT</artifact.version>
+    <artifact.version>2.0.1</artifact.version>
     <timestamp>${maven.build.timestamp}</timestamp>
     <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
     <!--  SONAR  -->
