--- a/dmaap-bc/pom.xml
+++ b/dmaap-bc/pom.xml
@@ -50,6 +50,7 @@
                 <requireReleaseDeps>
                   <message>No Snapshots Allowed!</message>
                   <excludes>
+<!-- for example, these might be needed...
                     <exclude>org.onap.dmaap.dbcapi:dbcapi</exclude>
                     <exclude>org.onap.aaf.authz:aaf-cadi-client</exclude>
                     <exclude>org.onap.aaf.authz:aaf-misc-env</exclude>
@@ -57,6 +58,7 @@
                     <exclude>org.onap.aaf.authz:aaf-auth-client</exclude>
                     <exclude>org.onap.aaf.authz:aaf-cadi-core</exclude>
                     <exclude>org.onap.aaf.authz:aaf-misc-rosetta</exclude>
+-->
                   </excludes>
                 </requireReleaseDeps>
               </rules>
@@ -421,7 +423,7 @@
     <dependency>
       <groupId>org.onap.dmaap.dbcapi</groupId>
       <artifactId>dbcapi</artifactId>
-      <version>2.0.1-SNAPSHOT</version>
+      <version>2.0.1</version>
     </dependency>
   </dependencies>
   <reporting>
