Modified addgroup/adduser syntax
Issue-ID: DMAAP-1363
Signed-off-by: dglFromAtt <dgl@research.att.com>
Change-Id: I3bb1e3a2b30e9b959727f15c042322e109520673
Signed-off-by: dglFromAtt <dgl@research.att.com>

--- a/dmaap-bc/src/main/resources/Dockerfile
+++ b/dmaap-bc/src/main/resources/Dockerfile
@@ -57,8 +57,8 @@ RUN mv etc/org.onap.dmaap-bc.jks etc/keystore && \
 
 VOLUME /opt/app/dmaapbc/log
 
-RUN addgroup -S -g 1001 onap \
-    && adduser -S -u 1000 dbc -G onap \
+RUN addgroup --system -gid 1001 onap \
+    && adduser --ingroup onap --system --disabled-password --no-create-home --uid 1000 dbc \
     && chown -R dbc:onap /opt/
 
 USER dbc
