Tighten up due to using new image
Issue-ID: DMAAP-1363
Signed-off-by: dglFromAtt <dgl@research.att.com>
Change-Id: Iec5c68b475453f57c17b641ad8726bba4dc18a5d
Signed-off-by: dglFromAtt <dgl@research.att.com>

--- a/dmaap-bc/src/main/resources/Dockerfile
+++ b/dmaap-bc/src/main/resources/Dockerfile
@@ -33,6 +33,7 @@ RUN apt-get update && \
        openssl \
        net-tools \
        wget \
+       procps \
        bash
 
 # Install AAF CA certificate
