--- a/dmaap-bc/pom.xml
+++ b/dmaap-bc/pom.xml
@@ -384,6 +384,11 @@
       <version>${jettyVersion}</version>
     </dependency>
     <dependency>
+      <groupId>org.eclipse.jetty</groupId>
+      <artifactId>jetty-util</artifactId>
+      <version>${jettyVersion}</version>
+    </dependency>
+    <dependency>
       <groupId>org.onap.aaf.authz</groupId>
       <artifactId>aaf-cadi-aaf</artifactId>
       <version>2.1.7</version>
@@ -456,9 +461,9 @@
   <properties>
     <multiproject.basedir>${basedir}/..</multiproject.basedir>
     <docker.maven.plugin.version>1.0.0</docker.maven.plugin.version>
-    <jersey.version>2.16</jersey.version>
+    <jersey.version>2.29</jersey.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <jettyVersion>9.4.12.RC2</jettyVersion>
+    <jettyVersion>9.4.24.v20191120</jettyVersion>
     <eelf.version>1.0.0</eelf.version>
     <swagger.version>1.5.19</swagger.version>
     <artifact.version>2.0.2-SNAPSHOT</artifact.version>
