Remove baked in certs and use downloaded certs
Issue-ID: DMAAP-1401
Signed-off-by: Ubuntu <dgl@research.att.com>
Change-Id: I4da88a80a79711d2173fb7814adb9f86e7af8739

--- a/dmaap-bc/src/main/resources/Dockerfile
+++ b/dmaap-bc/src/main/resources/Dockerfile
@@ -44,13 +44,9 @@ RUN update-ca-certificates
 
 
 #prepare certificate location for cadi
-RUN mkdir -p /opt/app/osaaf && \
-    ln -s /opt/app/dmaapbc/etc /opt/app/osaaf/local
+RUN mkdir -p /opt/app/osaaf 
 
-RUN mv etc/org.onap.dmaap-bc.jks etc/keystore && \
-    chmod 600 etc/keystore && \
-    chmod 600 etc/org.onap.dmaap-bc.trust.jks && \
-    chmod +x bin/* && \
+RUN chmod +x bin/* && \
     mkdir logs && \
     mkdir www && \
     mkdir doc && \
