--- a/dmaap-bc/pom.xml
+++ b/dmaap-bc/pom.xml
@@ -22,15 +22,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.onap.dmaap.buscontroller</groupId>
   <artifactId>dmaap-bc</artifactId>
-  <version>${artifact.version}</version>
+  <version>${revision}</version>
   <name>dmaap-bc</name>
   <parent>
-    <groupId>org.onap.oparent</groupId>
-    <artifactId>oparent</artifactId>
-    <version>3.2.0</version>
-    <relativePath/>
+    <groupId>org.onap.dmaap.buscontroller</groupId>
+    <artifactId>parent</artifactId>
+    <version>${revision}</version>
+    <relativePath>../pom.xml</relativePath>
   </parent>
   <build>
     <finalName>dmaap-bc</finalName>
@@ -415,7 +414,7 @@
     <dependency>
       <groupId>org.onap.dmaap.dbcapi</groupId>
       <artifactId>dbcapi</artifactId>
-      <version>2.0.2</version>
+      <version>2.0.3</version>
     </dependency>
   </dependencies>
   <reporting>
@@ -454,7 +453,6 @@
     <jettyVersion>9.4.36.v20210114</jettyVersion>
     <eelf.version>1.0.0</eelf.version>
     <swagger.version>1.5.19</swagger.version>
-    <artifact.version>2.0.4-SNAPSHOT</artifact.version>
     <timestamp>${maven.build.timestamp}</timestamp>
     <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
     <!--  SONAR  -->
@@ -477,7 +475,7 @@
     <maven.build.timestamp.format>yyyyMMdd'T'HHmmss'Z'</maven.build.timestamp.format>
 
     <!-- for Distribution Management -->
-    <sitePath>/content/sites/site/org/onap/dmaap/dmaap-bc/${artifact.version}</sitePath>
+    <sitePath>/content/sites/site/org/onap/dmaap/dmaap-bc/${revision}</sitePath>
   </properties>
   <description>Packaging Platform (DMaaP) Bus Controller API as a Docker container.</description>
 </project>
