DMAAP-1544 - Amend versions of buscontroller merge
Signed-off-by: david.mcweeney <david.mcweeney@est.tech>
Issue-ID: DMAAP-1544
Change-Id: I24474eff39f30a78bf95faf4a29565992a91a529

--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,8 @@
     <skip.docker.push>false</skip.docker.push>
     <docker.verbose>true</docker.verbose>
     <docker.apiVersion>2.2.54</docker.apiVersion>
+    <io.fabric8.version>0.28.0</io.fabric8.version>
+    <gmaven-plugin.version>1.5</gmaven-plugin.version>
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
     <snapshotNexusPath>/content/repositories/snapshots/</snapshotNexusPath>
@@ -173,7 +175,7 @@
           <artifactId>docker-maven-plugin</artifactId>
           <version>${io.fabric8.version}</version>
           <configuration>
-            <skipBuild>${docker.skip.build}</skipBuild>
+            <skipBuild>${skip.docker.build}</skipBuild>
             <verbose>${docker.verbose}</verbose>
             <apiVersion>${docker.apiVersion}</apiVersion>
             <pullRegistry>${docker.pull.registry}</pullRegistry>
